	  - The 'attribute key' used for 'attribute independence' _must_ be lowercase
	    to work as a variable later.
	  - PQL_CONF_ to PQL_ATTR_ spelling error fixed.
	  - Attribute spelling error fixed in tables/user_details-basic.inc
	    ('ugidnumber' should be 'uidnumber').
	  - Predefine (empty) variables to get rid of errors.

	GUI layout change
	  - Require the pql_config.inc file to avoid PHP errors in the right frame
	    when choosing control.php or ezmlm.php.

	Misc changes	
	  - The file 'doc/INSTALL' was moved to '.' so that it's easily seen.

phpQLAdmin 2.0.18b Release (Apr  6 2004)
	Bug fixes
	  - New config option - PQL_CONF_USE_TLS (true/false) which have to be true
	    for ldap_start_tls() to take place.

phpQLAdmin 2.0.18 Release (Apr  4 2004)
	Bug fixes
	  - PHP parse errors fixed.
	    Closes bug 67
	  - Don't use the Control class for Bind9. It looks in the wrong place
	    Closes bug 10
	  - Variable name overloading fixed.
	  - URL decode the domain value when creating the Group DN (pql_user_add()
	    function).
	    Closes bug 57, 70
	  - Wrongfull use of '$ACI_SUPPORT_ENABLED' (should have been
	    '$GLOBALS["ACI_SUPPORT_ENABLED"]').
	  - Fix folding for non-opera. Closes bug 76
	  - Create an array with the URL encoded values for user, rootdn and domain.
	    This is used in every (?) place where there's a distinction between value
	    and URL value (basicly in every 'a href')...
	  - Ability to view, add and delete additional groups (adding the users 'uid'
	    to the groups 'memberUid' attribute).
	    + Only visible if running in advanced mode.
	    Closes bug 71
	  - Move the initialization of the java variable expandedDb from trailer to
	    head.
	    Closes bug 61
	  - When looking in the domain branch if 'ou=DNS' exists, we should do this
	    with the BRANCH dn, not the RESULTING (ou=DNS,BRANCH) dn!
	  - If pql_set_domain_value() is called with an array, it does not nessesarily